[tool.poetry]
name = "common-crawl"
version = "0.1.0"
description = ""
authors = ["Felix Haba <felixhr2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cmoncrawl = "^1.1.7"
ipykernel = "^6.29.3"
requests = "^2.31.0"
warcio = "^1.7.4"
bs4 = "^0.0.2"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
httpx = "^0.27.0"
tiktoken = "^0.6.0"
aiolimiter = "^1.1.0"
tenacity = "^8.2.3"
nbconvert = "^7.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
